# SortedOMP

./: CMakeLists.txt  README.md  README.txt  main.cpp  mergesort.cpp  mergesort.h  quicksort.cpp  quicksort.h
